                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

03-11-14 V.Ivant (testem8-V10-00-06)
- TestEm8.in - reduce statistics to 1000

25-10-14 V.Ivant (testem8-V10-00-05)
- RunAction - fixed compillation warning

24-10-14 V.Ivant (testem8-V10-00-04)
- Migrated to MT mode (A.Bagulya)
  removed Histo, HistoManager, HistoMessenger classes
  added ActionInitialization, Run, TestParameters classes

12-06-14 V.Ivant (testem8-V10-00-03)
- applied code guidlines

28-04-14 V.Ivant (testem8-V10-00-02)
- added "emlowenergy" option for EM physics 

16-01-14 V.Ivant (testem8-V10-00-01)
- HistoManager - fixed output of rms of mean energy

01-01-14 V.Ivant (testem8-V10-00-00)
- HistoManager - more accurate computation of mean energy deposition

21-05-13 V.Ivant (testem8-V09-06-03)
- PhysicsList - substituted obsolete G4PAIPhotonMOdel by G4PAIPhotModel 

08-05-13 V.Ivant (testem8-V09-06-02)
- PhysicsList - fixed typo in PhysicsList::SetCutForProton

13-02-13 I.Hrivnacova (testem8-V09-06-01)
- Applied coding guidelines (virtual keyword, data members initialization)

08-02-13 V.Ivant (testem8-V09-06-00)
- Stacking action and its messenge are added allowing to kill
   secondary electrons inside GasDetector region and add this
   energy to total energy deposit; by default this option is off
- HistoManager - a histogram is added for energy deposition in units
   of ADC counts and an extra UI command "/testem/setEnergyPerChannel"

12-10-12 V.Ivant (testem8-V09-05-09)
- Migration to the updated analysis tool
- Added Opt4 Physics List and decreased limit on cuts

23-05-12 V.Ivant (testem8-V09-05-08)
- Histo - fixed n-tuples
